==================
### 1.5.2 (beta)
==================



==================
### 1.5.1 (beta)
==================

Bug fixes:
- Fix "undefined value as HASH" bug in the Wx item list control.
- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.
- "You are in Stunned state" message was verbosity 2 instead of 1.
- 'autostorage' command will now work even if storageAuto is set to 0.
- Sometimes openkore would stop auto-storing items covered by the 'all'
  setting in items_control.txt, necessitating a reload.
- Zeny earned is reset when you use "exp reset".
- "Inventory Item Removed" message was not being displayed when you drop
  (instead of fire) arrows.
- Your shop title and chatroom title will not longer than 36 characters.
- openkore was allowing more than 10 items to be added to the deal (bug #31)
  if you were adding more than one of the same type of equipment. The server
  would destroy these excess items! This is now fixed, except when you type a
  lot of "deal add" commands faster than the server responds.
- 'autosell' command will now work even if sellAuto is set to 0.
- Don't trigger sellAuto after storageAuto if sellAuto is 0.
- Set $char->{spirits} to 0 upon changing map servers.
- Fix teleporting for characters that have Teleport level 0.
- $monsters{$targetID}{skillUses}{$skill->handle}++ line was auto-vivifying
  $monsters{$targetID}, making players getting incorrectly counted as monsters
  and causing various bugs such as ghost player images, and
  itemsTakeAuto_party not working.
- Do not automatically add stats over 99 base stat.
- Detect negative damage correctly. (unpack 'S1' => 's1')